--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "yamljsonwatcherconverter",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "File watching utility that converts yaml directories into json ones",
   "main": "src/yamljsonwatcherconverter.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": {
-    "yamljsonwatcherconverter": "./bin/index.js"
-  },
+  "bin": "./bin/index.js",
   "dependencies": {
     "chokidar": "^3.1.1",
     "fs-extra": "^8.1.0",
